<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">366外勤</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="mainpage_news">消息</string>
    <string name="mainpage_app">应用</string>
    <string name="mainpage_work">工作</string>
    <string name="mainpage_me">我</string>
    
    <string name="mobile_mycheckin">当天记录0条</string>
    <string name="progress_loading">正在加载  #8230;</string>
    
    <string name="usual_app">常用应用</string>
    <string name="unusual_app">不常用应用</string>
    
    <string name="vertify_code_input">输入图中验证码</string>
    <string name="phone_input">输入手机号</string>
    <string name="sms_input">输入短信验证码</string>
    <string name="obtain_sms">获取验证码</string>
    <string name="next">下一步</string>
    
    <string name="company_name">企业名称：</string>
    <string name="company_name_tip">输入企业名称</string>
    <string name="register_name">真实姓名：</string>
    <string name="register_name_tip">输入真实姓名</string>
    <string name="initial_psw">初始密码：</string>
    <string name="initial_psw_tip">输入初始密码</string>
    
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="psw">密码</string>
    
    <string name="main_start_up_caution">应用启动中</string>
    
    <!-- 设置 -->
    <string name="setting_sys">系统设置</string>
    <string name="setting_changePsw">修改密码</string>
    <string name="setting_logou">退出登录</string>
    <string name="setting_manage">公司管理</string>
    <string name="setting_answer">在线客服</string>
    <string name="setting_checkV">版本检测</string>
    <string name="sex">性别</string>
    <string name="brithday">生日</string>
    <string name="card">名片</string>
    <string name="corpation">公司</string>
    <string name="partment">部门</string>
    <string name="position">职位</string>
    <string name="mobile">手机</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
</resources>
