<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include 
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:id="@+id/layout_company"
        android:layout_below="@+id/header"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        >
        <TextView 
            android:id="@+id/tv_companyname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/company_name"
            />
        <EditText 
            android:id="@+id/et_companyname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/company_name_tip"
            android:background="@null"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_below="@+id/layout_company"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:id="@+id/layout_register"
        android:layout_below="@+id/layout_company"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        >
        <TextView 
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_name"
            />
        <EditText 
            android:id="@+id/et_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/register_name_tip"
            android:background="@null"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_below="@+id/layout_register"
        />
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:id="@+id/layout_psw"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_below="@+id/layout_register"
        >
        <TextView 
            android:id="@+id/tv_initial_psw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initial_psw"
            />
        <EditText 
            android:id="@+id/et_initial_psw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/initial_psw_tip"
            android:background="@null"
            android:inputType="textPassword"
            />
    </LinearLayout>
     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_below="@+id/layout_psw"
        />
     <Button
         android:id="@+id/bt_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:background="@drawable/btn_gray"
         android:layout_marginTop="30dp"
         android:textColor="@color/gray"
         android:layout_marginLeft="13dp"
         android:layout_marginRight="13dp"
         android:layout_below="@+id/layout_psw"
         />
</RelativeLayout>
