<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:icontext="http://schemas.android.com/apk/res/com.sm.activity"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
>
<include
    android:layout_height="50dp"
    android:layout_width="match_parent"
    layout="@layout/header"
    />
<com.sm.view.MyScrollView 
    android:layout_width="match_parent"
    android:layout_height="0px"
    android:layout_weight="1"
    android:id="@+id/myScrollView"
    >
</com.sm.view.MyScrollView>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal"
    android:background="@drawable/bottom_nav"
    >
    <com.sm.view.ChangeIconText 
        android:id="@+id/ChangeIconText_One"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        icontext:view_icon="@drawable/news"
        icontext:view_color="#ff45c01a"
        icontext:view_text="@string/mainpage_news"
        icontext:text_size="10sp"
        android:padding="5dp"
        />
      <com.sm.view.ChangeIconText 
        android:id="@+id/ChangeIconText_Two"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        icontext:view_icon="@drawable/apps"
        icontext:view_color="#ff45c01a"
        icontext:view_text="@string/mainpage_app"
        icontext:text_size="10sp"
        android:padding="5dp"
        />
        <com.sm.view.ChangeIconText 
        android:id="@+id/ChangeIconText_Three"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        icontext:view_icon="@drawable/work"
        icontext:view_color="#ff45c01a"
        icontext:view_text="@string/mainpage_work"
        icontext:text_size="10sp"
        android:padding="5dp"
        />
        <com.sm.view.ChangeIconText 
        android:id="@+id/ChangeIconText_Four"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        icontext:view_icon="@drawable/me"
        icontext:view_color="#ff45c01a"
        icontext:view_text="@string/mainpage_me"
        icontext:text_size="10sp"
        android:padding="5dp"
        />
</LinearLayout>
</LinearLayout>

