<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vertifyCode="http://schemas.android.com/apk/res/com.sm.activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >
    <include 
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_marginTop="80dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:layout_below="@+id/header"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_input"
            android:background="@null"
            android:paddingLeft="4dp"
            android:id="@+id/et_phone"
            android:inputType="number"
            >
            
        </EditText>
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp" 
        android:layout_below="@+id/phone"
        android:background="@color/line_color"
        android:paddingTop="5dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        />
    <LinearLayout 
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/phone"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
         android:layout_marginBottom="10dp"
        >
        <EditText
            android:id="@+id/et_vertifyCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/vertify_code_input"
            android:background="@null"
            android:paddingLeft="4dp"
            >
            
        </EditText>
        <com.sm.view.VertifyCode 
            android:layout_width="80dp"
            android:layout_height="40dp"
            vertifyCode:code_count="4"
            android:id="@+id/vertify_code"
            android:background="#f5fffa"
            />
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/layout_code"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_marginTop="10dp"
        android:id="@+id/layout_code"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        
        >
        <EditText 
            android:id="@+id/et_sms_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/sms_input"
            android:background="@null"
            android:paddingLeft="4dp"
            />

        <Button 
            android:layout_width="80dp" 
            android:layout_height="40dp"
            android:text="@string/obtain_sms"
            android:textColor="@color/white"
            android:id="@+id/bt_sms_code"
            android:paddingLeft="3dp"
            android:background="@drawable/btn_gray"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            />

    </LinearLayout>
        <View 
        android:layout_below="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        />
     <Button 
         android:id="@+id/bt_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="13dp"
         android:layout_marginRight="13dp"
         android:layout_marginTop="40dp"
         android:paddingTop="3dp"
         android:paddingBottom="3dp"
         android:text="@string/next"
         android:layout_below="@+id/layout_code"
         android:background="@drawable/btn_gray"
         android:textColor="@color/gray"
         />
</RelativeLayout>
