<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:personImg="http://schemas.android.com/apk/res/com.sm.activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 

    >
<RelativeLayout 
    android:id="@+id/llayout_info"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="30dp"
    android:background="#fff"
    android:gravity="center_vertical"
    >
    <com.sm.view.PersonImg 
        android:id="@+id/iv_person"
        android:layout_width="80dp"
        android:layout_height="80dp"
        personImg:person_img_height="60dp"
        personImg:person_img_width="60dp"
        personImg:person_img_pos=""
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
       />


   <TextView 
       android:id="@+id/tv_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/phone_input"
       android:layout_toRightOf="@+id/iv_person"
       android:textColor="@color/black"
       android:paddingLeft="3dp"
       android:textSize="18sp"
       android:layout_marginTop="10dp"
       />
   
    <TextView 
       android:id="@+id/tv_custname"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/phone_input"
       android:layout_toRightOf="@+id/iv_person"
       android:layout_below="@+id/tv_name"
       android:textColor="@color/black"
       android:paddingTop="4dp"
       android:paddingLeft="3dp"
       android:textSize="16sp"
       />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/right_arrow"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="15dp"
        />
</RelativeLayout>

<!-- 系统设置，公司管理，修改密码 -->
<LinearLayout 
    android:id="@+id/llayout_other"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_marginTop="20dp"
    >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        >
        <ImageView 
            android:id="@+id/iv_sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fuwu_icon"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/setting_manage"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sys"
            android:layout_marginLeft="20dp"
            android:id="@+id/tv_sys"
            android:layout_toRightOf="@+id/iv_sys"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/setting_manage"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="#f3f3f3" 
        android:layout_marginLeft="60dp"
     />


    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        >
        <ImageView 
            android:id="@+id/iv_manage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/fuwu_icon"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/setting_manage"
            
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_manage"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_manage"
            android:id="@+id/tv_manage"
              android:gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/setting_manage"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="#f3f3f3" 
        android:layout_marginLeft="60dp"
     />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        >
        <ImageView 
            android:id="@+id/iv_changePsw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/fuwu_icon"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/setting_changePsw"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_changePsw"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_changePsw"
            android:id="@+id/tv_changePsw"
            android:gravity="center_vertical"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"
            android:contentDescription="@string/setting_changePsw"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
</LinearLayout>

<!--  -->
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:background="#fff"
    >
   <RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:gravity="center_vertical"
     >
     <ImageView 
        android:id="@+id/iv_checkV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/fuwu_icon"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/setting_checkV"
     />
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/setting_checkV"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/iv_checkV"
        android:id="@+id/setting_checkV"
        android:gravity="center_vertical"
     />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right_arrow"
        android:contentDescription="@string/setting_checkV"
        android:layout_marginRight="15dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
     />
   </RelativeLayout>
   <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="#f3f3f3" 
        android:layout_marginLeft="60dp"
     />
  <RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:gravity="center_vertical"
     >
     <ImageView 
        android:id="@+id/iv_answer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/fuwu_icon"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/setting_answer"
     />
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/setting_answer"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/iv_answer"
        android:id="@+id/setting_answer"
        android:gravity="center_vertical"
     />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right_arrow"
        android:contentDescription="@string/setting_answer"
        android:layout_marginRight="15dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
     />
    </RelativeLayout>
</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal"
    android:background="#fff"
    android:layout_marginTop="20dp"
    android:gravity="center"
    >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_logou"
        android:layout_marginLeft="20dp"
        android:textColor="@color/red"
     />
</LinearLayout>
</LinearLayout>
