<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:personImg="http://schemas.android.com/apk/res/com.sm.activity"
    xmlns:iconButton="http://schemas.android.com/apk/res/com.sm.activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3cbaff"
    android:orientation="vertical" >
    <!-- 
       <include 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       layout="@layout/header"
       /> 
     -->
     <LinearLayout 
         android:id="@+id/ll_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="right"
         android:paddingRight="15dp"
         android:visibility="visible"
         >
         <TextView
             android:id="@+id/login_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:textColor="@color/white"
             android:paddingTop="10dp"
             android:layout_gravity="right|center_vertical"
             android:textSize="18sp"
             />
     </LinearLayout>
     <LinearLayout 
         android:id="@+id/ll_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="vertical"
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         >
         <com.sm.view.PersonImg 
             android:id="@+id/login_person_img"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             personImg:person_img_height="80dp"
             personImg:person_img_width="80dp"
             personImg:person_img_pos="center"
             />
         <TextView 
             android:id="@+id/login_tv_name"
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
             android:gravity="center"
             android:textColor="@color/white"
             />
     </LinearLayout>
     <!-- 账号 -->
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round_corner1"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:id="@+id/rl_account"
         android:visibility="visible"
         >
         <TextView 
             android:id="@+id/tv_phone_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+86"
             android:textColor="@color/white"
             android:layout_alignParentLeft="true"
             android:paddingTop="5dp"
             android:paddingLeft="13dp"
             android:textSize="12sp"
             />
         <TextView 
             android:id="@+id/tv_phone_contry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="中国"
             android:layout_below="@+id/tv_phone_tip"
             android:paddingTop="-2dp"
             android:paddingLeft="13dp"
             android:paddingBottom="5dp"
             android:textSize="9sp"
             android:textColor="@color/black"
             />
         <View 
             android:id="@+id/view_line"
             android:layout_width="1.0px"
             android:layout_height="23dp"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
             android:background="#fff"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tv_phone_contry"
             android:layout_centerVertical="true"
             />
         <EditText 
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/view_line"
             android:inputType="phone"
             android:background="#bfbfbf"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:hint="输入手机号码"
             />
     </RelativeLayout>
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/round_corner1"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         >
         <TextView 
             android:id="@+id/tv_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/psw"
             android:paddingLeft="11dp"
             android:paddingRight="10dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:gravity="center_vertical"
             android:layout_centerVertical="true"
             android:textColor="@color/white"
             android:textSize="18sp"
             />
         <EditText 
             android:id="@+id/et_psw"
             android:layout_width="200dp"
             android:layout_toRightOf="@+id/tv_tip"
             android:layout_height="wrap_content"
             android:hint="输入密码"
             android:inputType="textPassword"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:layout_centerVertical="true"
             android:background="#bfbfbf"
             android:textSize="18sp"
             />
     </RelativeLayout>
     <com.sm.view.BaseButtons 
         android:id="@+id/bt_login"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="40dp"
         android:paddingTop="3dp"
         android:paddingBottom="3dp"
         android:text="@string/login"
         android:background="@null"
         android:textColor="@color/white"
         iconButton:transparentBackground="true"
         iconButton:roundedCorner="true"
         iconButton:roundedCornerRadius="40dp"
         android:gravity="center"
         />
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         >
         <TextView 
             android:id="@+id/tv_change"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="切换账号"
             android:layout_alignParentLeft="true"
             android:textColor="@color/white"
             />
         <TextView 
             android:id="@+id/tv_help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录遇到问题？"
             android:textColor="@color/white"
             android:layout_alignParentRight="true"
             />
     </RelativeLayout>
     <com.sm.view.DynamicView 
         android:id="@+id/dynameicview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         
         />
</LinearLayout>
